# memphant

./: .env.example  .gitignore  AUTH_SYNC_GUARDRAILS.md  CHANGELOG.md  CLAUDE.md  LAUNCH_CHECKLIST.md  LICENSE  LICENSE-SUMMARY.md  PRIVACY.md  PRODUCT_POSITIONING.md  PROJECT_BRAIN_ALLHANDS.md  README.md  SECURITY.md  SYNC_LOGOUT_RULES.md  Stripe_Integration_Guide.docx  eslint.config.js  index.html  jest.config.cjs  memephant-test-plan.md  package-lock.json  package.json  pnpm-lock.yaml  supabase-rls-fix.sql  tsconfig.api.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
api/: auth-callback.ts  create-checkout.ts  create-portal.ts  delete-account.ts  health.ts  subscribe.ts  webhook.js
chrome-extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/prompt-guard/: index.js  overlay.js  promptAnalyzer.js
docs/: agent-handoff.md  demo-script.md  folder-watcher-allowlist.md  folder-watcher-redaction-policy.md  folder-watcher-status.md  manual-setup-steps.md  memphant-bet.md  memphant-update-spec.md  memphant_update_protocol.md  sync_conflict_policy.md
docs/internal/: Memephant_PreLaunch_Audit.docx  PROJECT_BRAIN_SUPER_PROMPT.md
docs/screenshots/: README.md
landing/: index.html
public/: cancel.html  index.html  manifest.json  robots.txt  sitemap.xml  success.html  sw.js
public/auth/: callback.html
public/download/: index.html
scripts/: audit-rls.ts  generate-icons.cjs
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/projects/: AI_Memory_System.json  mental-health-backend.json  project-brain-desktop.json  project_brain.json  project_test_2.json  test_project.json
src-tauri/src/: lib.rs  main.rs  project_launchpad.rs  summariser.rs  watcher.rs  watcher_commands.rs
src-tauri/src/vcp/: manifest.rs  mod.rs
src-tauri/tests/fixtures/vcp/: empty_project.json  small_mixed_project.json  small_mixed_project_edited_rule.json
src/components/: EmptyEditorView.tsx  HomeView.tsx  NewProjectModal.tsx  PWAInstallButton.tsx  PWAUpdatePrompt.tsx  ProjectEditor.tsx  ProjectList.tsx  ProjectsView.tsx  RecentActivityBlock.tsx  Sidebar.tsx
(+119 files in other folders)
