[package]
name = "memephant-desktop"
version = "0.2.4"
description = "Remember your projects so your AIs don't have to"
authors = ["Kris Ninnis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "memephant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

# Pin plugin versions to match npm
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"

[features]
# Compile the folder-watcher skeleton into the binary.
# Nothing runs unless start_watcher() is explicitly called from a Tauri command.
# To enable: cargo build --features folder_watcher
folder_watcher = []
